package PoolGame.Observer;

public interface Observer {

    public void update();
}
